fixing optimization, speeding up tracker

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/favicon.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Billie's Tracker</title>
+    <meta name="description" content="Track your cat's health, activities, and well-being with Cat Tracker - a comprehensive pet health monitoring application." />
+    <meta name="theme-color" content="#2D3748" />
+    <title>Cat Tracker</title>
   </head>
   <body>
     <div id="root"></div>
