--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Track your cat's health, activities, and well-being with Cat Tracker - a comprehensive pet health monitoring application." />
     <meta name="theme-color" content="#2D3748" />
+
+    <!-- Preconnect to API for faster data loading -->
+    <link rel="preconnect" href="https://graceful-optimism-production.up.railway.app" crossorigin />
+    <link rel="dns-prefetch" href="https://graceful-optimism-production.up.railway.app" />
+
     <title>Cat Tracker</title>
   </head>
   <body>
